--- a/DivvyUp/DivvyUp.csproj
+++ b/DivvyUp/DivvyUp.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
       <PackageReference Include="Spectre.Console" Version="0.48.0" />
+      <PackageReference Include="System.Data.SQLite" Version="1.0.118" />
     </ItemGroup>
 
 </Project>
